# Homework_web_4

./: app.py  pyproject.toml
storage/: data.json
